2023 12 multithreaded - but stil not enough