@@ -1,4 +1,12 @@
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -6,29 +14,29 @@ public class Task2 {
   private final String regexDamaged = "(#+)";
   private final Pattern patternDamaged = Pattern.compile(regexDamaged, Pattern.MULTILINE);
 
-  long sumArrangements = 0;
-  long sumArrangements2 = 0;
-  int rowCount = 0;
+  static AtomicLong sumArrangements = new AtomicLong(0);
+  static AtomicLong sumArrangements2 = new AtomicLong(0);
+  static AtomicInteger rowCount = new AtomicInteger(0);
 
   public void init() {
   }
 
   public void addLine(String input) {
-    rowCount++;
-    out(rowCount);
+    int rowC = rowCount.incrementAndGet();
+    out(rowC);
     String[] split = input.split("\\s+", 2);
     String damagedRow = split[0];
-//    out("damagedRow", damagedRow);
+    //    out("damagedRow", damagedRow);
     ArrayList<String> damagedRowAsList = Util.str2List(damagedRow);
 
     List<Integer> damagedBlocks = Arrays.stream(split[1].split(",")).mapToInt(i -> Integer.parseInt(i.trim())).boxed().toList();
-//    out("damagedBlocks", damagedBlocks);
+    //    out("damagedBlocks", damagedBlocks);
 
     long countPossibleCombinations = calcCombinations(new ArrayList<>(damagedRowAsList), new ArrayList<>(damagedBlocks));
 
-//    out("countPossibleCombinations", countPossibleCombinations);
+    //    out("countPossibleCombinations", countPossibleCombinations);
 
-    sumArrangements += countPossibleCombinations;
+    sumArrangements.addAndGet(countPossibleCombinations);
 
     // Part 2
     ArrayList<String> damagedRowAsList2 = new ArrayList<>();
@@ -38,7 +46,8 @@ public class Task2 {
       damagedBlocks2.addAll(damagedBlocks);
     }
     countPossibleCombinations = calcCombinations(new ArrayList<>(damagedRowAsList2), new ArrayList<>(damagedBlocks2));
-    sumArrangements2 += countPossibleCombinations;
+    out(rowC + " done");
+    sumArrangements2.addAndGet(countPossibleCombinations);
   }
 
   private record CacheKey2(ArrayList<String> damagedRow, List<Integer> damagedBlocks) {
@@ -47,7 +56,9 @@ public class Task2 {
   private static final Map<CacheKey2, Long> cache2 = new HashMap<>();
 
   private long calcCombinations(ArrayList<String> damagedRow, List<Integer> damagedBlocks) {
-    while (damagedRow.size() > 1 && damagedRow.getFirst().equals(".")) damagedRow.removeFirst();
+    while (damagedRow.size() > 1 && damagedRow.get(0).equals(".")) {
+      damagedRow.remove(0);
+    }
 
     CacheKey2 cacheKey2 = new CacheKey2(damagedRow, damagedBlocks);
     Long cachedValue = cache2.get(cacheKey2);
@@ -56,12 +67,13 @@ public class Task2 {
     }
 
     if (damagedBlocks.size() == 1) {
-      long res = calcCombinations(damagedRow, damagedBlocks.getFirst()).size();
+      long res = calcCombinations(damagedRow, damagedBlocks.get(0)).size();
       cache2.put(cacheKey2, res);
       return res;
-    } else {
+    }
+    else {
       List<Integer> subDamagedBlocks = new ArrayList<>(damagedBlocks);
-      int damagedBlock = subDamagedBlocks.removeFirst();
+      int damagedBlock = subDamagedBlocks.remove(0);
 
       long combinations = 0;
 
@@ -76,7 +88,7 @@ public class Task2 {
         ArrayList<String> damagedRowSubList = new ArrayList<>(damagedRow.subList(0, actToIdx));
         Set<String> combinationsFirstBlock = calcCombinations(damagedRowSubList, damagedBlock);
 
-        if (combinationsFirstBlock.isEmpty() && damagedRowSubList.getLast().equals(".") && damagedRowSubList.contains("#")) {
+        if (combinationsFirstBlock.isEmpty() && damagedRowSubList.get(damagedRowSubList.size() - 1).equals(".") && damagedRowSubList.contains("#")) {
           break;
         }
 
@@ -98,7 +110,7 @@ public class Task2 {
 
           // Damaged End = '#' -> sublist2 must start with . (or ? but then set .)
           ArrayList<String> damagedRowSubList2 = new ArrayList<>(damagedRow.subList(actToIdx, damagedRow.size()));
-          String first = damagedRowSubList2.getFirst();
+          String first = damagedRowSubList2.get(0);
           if (!first.equals("#")) {
             if (first.equals("?"))
               damagedRowSubList2.set(0, ".");
@@ -146,7 +158,7 @@ public class Task2 {
       String damagedRowCheck = String.join("", damagedR);
       List<Integer> damagedGroups = getDamagedGroups(damagedRowCheck);
 
-      if (damagedGroups.size() == 1 && damagedGroups.getFirst() == damagedBlock)
+      if (damagedGroups.size() == 1 && damagedGroups.get(0) == damagedBlock)
         countPossibleCombinations.add(damagedRowCheck);
 
       cache.put(cacheKey, countPossibleCombinations);
@@ -161,10 +173,11 @@ public class Task2 {
       if (binary.length() > unknownIdxList.size())
         break;
 
-      while (binary.length() < unknownIdxList.size())
+      while (binary.length() < unknownIdxList.size()) {
         binary.insert(0, "0");
+      }
 
-//      out(i, binary.toString());
+      //      out(i, binary.toString());
 
       ArrayList<String> binaryAsList = Util.str2List(binary.toString());
       for (int idx = 0; idx < binaryAsList.size(); idx++) {
@@ -175,20 +188,20 @@ public class Task2 {
       String damagedRowCheck = String.join("", damagedR);
       List<Integer> damagedGroups = getDamagedGroups(damagedRowCheck);
 
-      if (damagedGroups.size() == 1 && damagedGroups.getFirst() == damagedBlock) {
+      if (damagedGroups.size() == 1 && damagedGroups.get(0) == damagedBlock) {
         countPossibleCombinations.add(damagedRowCheck);
 
-//        out("Found combination:", damagedRowCheck);
+        //        out("Found combination:", damagedRowCheck);
       }
     }
 
-//    out("countPossibleCombinations", countPossibleCombinations);
+    //    out("countPossibleCombinations", countPossibleCombinations);
 
     cache.put(cacheKey, countPossibleCombinations);
     return countPossibleCombinations;
   }
 
-  public void afterParse() {
+  public static void afterParse() {
     out("Part 1", "sumArrangements:", sumArrangements);
     out("Part 2", "sumArrangements:", sumArrangements2);
   }
@@ -197,16 +210,16 @@ public class Task2 {
     Matcher matcher = patternDamaged.matcher(damagedRow);
     List<Integer> damagedGroups = new ArrayList<>();
     while (matcher.find()) {
-//      out("Full match: " + matcher.group(0));
+      //      out("Full match: " + matcher.group(0));
       int startIdx = matcher.start();
       int endIdx = matcher.end();
-//      out(startIdx, endIdx);
+      //      out(startIdx, endIdx);
       damagedGroups.add(endIdx - startIdx);
     }
     return damagedGroups;
   }
 
-  public void out(Object... str) {
+  public static void out(Object... str) {
     Util.out(str);
   }
 
